--- a/AdvancedDataScanner/AdvancedDataScanner.csproj
+++ b/AdvancedDataScanner/AdvancedDataScanner.csproj
@@ -4,7 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <ApplicationManifest>AdvancedDataScanner.manifest</ApplicationManifest>
-    <ApplicationIcon>ico.ico</ApplicationIcon>
+    <ApplicationIcon>app_icon.ico</ApplicationIcon>
     <SignAssembly>False</SignAssembly>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Company>Private Contributor</Company>
@@ -12,8 +12,7 @@
     <Product>$(AssemblyName) V1.0.0</Product>
     <Description>Scann specifik folder Paths and all its under Folders, aply searches, filters and get
 precice file infos</Description>
-    <PackageIcon>ico.png</PackageIcon>
-    <PackageReadmeFile>info.md</PackageReadmeFile>
+    <PackageIcon>package_icon.png</PackageIcon>
     <PackageTags>Folders; Files; Scann; Search</PackageTags>
     <NeutralLanguage>en</NeutralLanguage>
     <AssemblyVersion>1.0.0</AssemblyVersion>
@@ -23,14 +22,7 @@ precice file infos</Description>
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="ico.ico" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="info.md">
-      <Pack>True</Pack>
-      <PackagePath>\</PackagePath>
-    </None>
+    <Content Include="app_icon.ico" />
   </ItemGroup>
 
 </Project>
