Implement start JSON saving on drive

--- a/AdvancedDataScanner/AdvancedDataScanner.csproj
+++ b/AdvancedDataScanner/AdvancedDataScanner.csproj
@@ -29,6 +29,10 @@ precice file infos</Description>
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="pack_icon.png">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
